Change footer hidden to footer removed -- To avoid height issue on mobile

--- a/202406_rockpaperscissors/css/styles.css
+++ b/202406_rockpaperscissors/css/styles.css
@@ -309,8 +309,8 @@ button:disabled:hover {
   justify-content: space-around;
 }
 
-.footer-hidden {
-  visibility: hidden;
+.footer-removed {
+  display:none;
 }
 
 /* MEDIA QUERIES */
